namespace/media/ersatztv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ersatztv
  namespace: media
  labels:
    app.kubernetes.io/name: ersatztv
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ersatztv
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ersatztv
        app.kubernetes.io/managed-by: flux
    spec:
      runtimeClassName: nvidia
      securityContext:
        supplementalGroups:
          - 44 
      automountServiceAccountToken: false
      containers:
        - name: ersatztv
        # renovate: datasource=docker depName=ghcr.io/ersatztv/ersatztv
          image: ghcr.io/ersatztv/ersatztv:latest@sha256:5464348e1989be72161e1e6ef197cf1a1c403efed8090474ce1ffe501a375c37
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8409
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
              nvidia.com/gpu: "1"
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ersatztv-config
